--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,16 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+
+download:
+  needs: build
+  runs-on: ubuntu-latest
+  steps:
+    - name: download text file
+      uses: actions/download-artifact@v4
+	    with:
+	      name: hello-artifact
+	      path: ./artifacts
+        
+    - name: display content text file
+      run: cat ./artifacts/hello.txt
